--- a/src/boot/CMakeLists.txt
+++ b/src/boot/CMakeLists.txt
@@ -10,7 +10,7 @@ project(FlatImage DESCRIPTION "FlatImage" LANGUAGES CXX)
 # Compiler
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_COMPILER g++)
+set(CMAKE_CXX_COMPILER /usr/bin/c++)
 set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 message(STATUS "Compiler: ${CMAKE_CXX_COMPILER}")
