Rework of fim-version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,8 @@ find_package(Git REQUIRED)
 require_variable_env(FIM_DIST)
 ## Reserved size for persistent flatimage configuration
 require_variable_env(FIM_RESERVED_SIZE)
+## Metadata information about binary dependencies
+require_variable_env(FIM_METADATA_DEPS)
 ## Version
 execute_process(
   COMMAND ${GIT_EXECUTABLE} -c safe.directory=${CMAKE_SOURCE_DIR} describe --tags --abbrev=0
@@ -89,6 +91,7 @@ target_link_options(boot PRIVATE -static)
 target_compile_definitions(boot PRIVATE
   FIM_DIST="$ENV{FIM_DIST}"
   FIM_RESERVED_SIZE=$ENV{FIM_RESERVED_SIZE}
+  FIM_METADATA_DEPS=R\"\($ENV{FIM_METADATA_DEPS}\)\"
   FIM_VERSION="${FIM_VERSION}"
   FIM_TIMESTAMP="${FIM_TIMESTAMP}"
   FIM_COMMIT="${FIM_GIT_COMMIT_HASH}"
