Integrate mermaid in mkdocs

--- a/doc/mkdocs/mkdocs.yml
+++ b/doc/mkdocs/mkdocs.yml
@@ -37,3 +37,6 @@ nav:
     - Environment: architecture/environment.md
     - Directories: architecture/directories.md
 theme: readthedocs
+plugins:
+  - search
+  - mermaid2
