feat(doctest): Include doctest test cases

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,9 @@ elseif(FIM_TARGET STREQUAL "doxygen")
   include(Doxygen)
 elseif(FIM_TARGET STREQUAL "mkdocs")
   include(MkDocs)
+elseif(FIM_TARGET STREQUAL "test")
+  enable_testing()
+  add_subdirectory(test)
 else()
-  message(FATAL_ERROR "Invalid FIM_TARGET: ${FIM_TARGET}. Valid values are: boot, doxygen, mkdocs")
+  message(FATAL_ERROR "Invalid FIM_TARGET: ${FIM_TARGET}. Valid values are: boot, doxygen, mkdocs, test")
 endif()
