fix(mkdocs): Incorrect site_url

--- a/doc/mkdocs/mkdocs.yml
+++ b/doc/mkdocs/mkdocs.yml
@@ -68,5 +68,5 @@ plugins:
         - ".d2"
       exclude_selectors:
         - "img"
-site_url: https://flatimage.github.io
+site_url: https://flatimage.github.io/docs
 repo_url: https://github.com/flatimage/flatimage
