ci(general): Included blueprint build

--- a/.github/workflows/gitea-continuous.yml
+++ b/.github/workflows/gitea-continuous.yml
@@ -11,7 +11,7 @@ jobs:
     if: ${{ !contains(github.server_url, 'github.com') }}
     strategy:
       matrix:
-        dist: [alpine,arch]
+        dist: [alpine,arch,blueprint]
         arch: [x86_64]
     runs-on: ubuntu-latest
     steps:
